# RAG-EVAL

./: .env.example  .gitignore  README.md  eval_config.yaml  golden_dataset.jsonl  pyproject.toml
.github/workflows/: rag_eval.yml
app/: rag_pipeline.py
app/corpus/: 01_transformers.txt  02_attention.txt  03_rag.txt  04_fine_tuning.txt  05_rlhf.txt  06_vector_databases.txt  07_hallucinations.txt  08_scaling_laws.txt  09_prompt_engineering.txt  10_inference_serving.txt  11_ai_agents.txt  12_evaluation_metrics.txt  13_tokenization.txt  14_mcp.txt  15_cost_optimization.txt  16_mixture_of_experts.txt  17_llmops.txt  18_bert_encoders.txt  19_guardrails.txt  20_cicd_ml.txt
examples/: demo.py
rag_eval/: __init__.py  cli.py  evaluator.py  grafana_push.py  reporter.py
scripts/: push_dataset_to_hf.py  push_to_github.py
